# SDA

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.MD  README.md
core/: CMakeLists.txt
core/include/core/: AddressSpace.h  BitMask.h  Context.h  DataType.h  Destroy.h  Function.h  Object.h  ObjectList.h  Offset.h  Project.h  Serialization.h
core/src/: BitMask.cpp  Commit.cpp  Context.cpp  ContextCallbacks.cpp  Factory.cpp  Function.cpp  Object.cpp  Offset.cpp  Program.cpp  Project.cpp  Serialization.cpp  Utils.cpp
core/src/DataType/: ArrayDataType.cpp  DataType.cpp  DataTypeParser.cpp  DataTypePrinter.cpp  EnumDataType.cpp  PointerDataType.cpp  ScalarDataType.cpp  SignatureDataType.cpp  StructureDataType.cpp  TypedefDataType.cpp  VoidDataType.cpp
core/src/Event/: Event.cpp  EventPipe.cpp
core/src/IRcode/: IRcodeBlock.cpp  IRcodeBlockGenerator.cpp  IRcodeCallbacks.cpp  IRcodeContextSync.cpp  IRcodeDataTypeProvider.cpp  IRcodeFunction.cpp  IRcodeGenerator.cpp  IRcodeHelper.cpp  IRcodeLinearExpr.cpp  IRcodeMemory.cpp  IRcodeOperation.cpp  IRcodePcodeSync.cpp  IRcodePrinter.cpp  IRcodeProgram.cpp  IRcodeRender.cpp  IRcodeValue.cpp
core/src/Image/: AddressSpace.cpp  Image.cpp  ImageAnalyser.cpp  ImageContext.cpp  ImageRW.cpp  ImageReader.cpp  ImageSection.cpp
core/src/Object/: ContextObject.cpp  Object.cpp
core/src/Pcode/: PcodeBlock.cpp  PcodeFunctionGraph.cpp  PcodeGraph.cpp  PcodeGraphCallbacks.cpp  PcodeGraphСonsistency.cpp  PcodeInstruction.cpp  PcodeInstructionProvider.cpp  PcodeParser.cpp  PcodePrinter.cpp  PcodeRegister.cpp  PcodeRender.cpp  PcodeStructurer.cpp  PcodeVarnodes.cpp
core/src/Platform/: CallingConvention.cpp  Instruction.cpp  InstructionDecoder.cpp  PcodeDecoder.cpp  Register.cpp
core/src/Researchers/: DataFlowResearcher.cpp  StructureResearcher.cpp
core/src/Semantics/: DataFlowSemantics.cpp  Semantics.cpp  StructureResearcher.cpp
core/src/Symbol/: FunctionParameterSymbol.cpp  FunctionSymbol.cpp  MemoryVariableSymbol.cpp  RegisterVariableSymbol.cpp  StructureFieldSymbol.cpp  Symbol.cpp  SymbolTable.cpp  VariableSymbol.cpp
core/src/SymbolTable/: OptimizedSymbolTable.cpp  StandartSymbolTable.cpp  SymbolTable.cpp  SymbolTableParser.cpp  SymbolTablePrinter.cpp
core/src/Utils/: AbstractParser.cpp  AbstractPrinter.cpp  BitMask.cpp  BitSet.cpp  IOManip.cpp  Logger.cpp  String.cpp
core/test/common/: CMakeLists.txt
core/test/test/: CMakeLists.txt
decompiler/: CMakeLists.txt
decompiler/src/IRcodeGenerator/: IRcodeBlockGenerator.cpp  IRcodeFunctionGenerator.cpp
decompiler/src/Pcode/: FunctionCallLookup.cpp  PcodeBlockBuilder.cpp  PcodeGraphBuilder.cpp  VtableLookup.cpp  VtableLookup.cpps
decompiler/src/PcodeAnalysis/: FunctionCallLookup.cpp  PcodeBlockBuilder.cpp  PcodeGraphBuilder.cpp  VtableLookup.cpp
decompiler/src/Semantics/: DataTypeSemantics.cpp  IRcodeDataTypePropagator.cpp  Semantics.cpp  SemanticsInitializer.cpp  SemanticsManager.cpp  SemanticsObject.cpp  SemanticsPropagator.cpp  SemanticsProvider.cpp
decompiler/test/: CMakeLists.txt
decompiler/test/IRcode/: IRcodeBlockGenerator.cpp
decompiler/test/common/: CMakeLists.txt
decompiler/test/test/: CMakeLists.txt
disasm/: CMakeLists.txt
disasm/include/Disasm/: DecoderPcode.h  FunctionCallLookup.h  InstructionRender.h  PcodeBlockBuilder.h  PcodeGraphBuilder.h  VtableLookup.h  ZydisDecoderPcodeX86.h
disasm/src/: DecoderPcode.cpp  FunctionCallLookup.cpp  InstructionRender.cpp  PcodeBlockBuilder.cpp  PcodeGraphBuilder.cpp  VtableLookup.cpp  ZydisDecoderPcodeX86.cpp
disasm/src/Zydis/: ZydisDecoderPcodeX86.cpp  ZydisInstructionRenderX86.cpp  ZydisPlatformSpec.cpp  ZydisRenderX86.cpp
extras/dec_test_samples/: CMakeLists.txt  dec_test_samples.cpp  dec_test_samples.h
extras/decompiler_test_lib/: CMakeLists.txt  decompiler_test_lib.cpp  main.cpp  main.h
extras/decompiler_test_lib/include/: decompiler_test_lib.h  test_functions.h
extras/decompiler_test_lib/src/: decompiler_test_lib.cpp  test_functions.cpp
extras/ghidra_sync/: CMakeLists.txt  datatype.thrift  function.thrift  ghidra.thrift  shared.thrift  variable.thrift
libs/imgui_wrapper/: CMakeLists.txt
platform/x86/: CMakeLists.txt
platform/x86/src/: CallingConvention.cpp  InstructionDecoder.cpp  PcodeDecoder.cpp  Platform.cpp  RegisterHelper.cpp  RegisterRepository.cpp
platform/x86/test/: CMakeLists.txt  PcodeDecoderTest.cpp
plugin/: CMakeLists.txt
plugin/include/plugin/: PluginAPI.h
plugin/src/: PluginLoader.cpp
sda/: CMakeLists.txt
sda/include/: Change.h  Factory.h  Program.h  Project.h
sda/include/Callbacks/: ContextCallbacks.h
sda/include/Database/: Database.h  Loader.h  Schema.h  Transaction.h
sda/include/SDA/: Change.h  Factory.h  Program.h  Project.h
sda/include/plugin/: PluginAPI.h  PluginLoader.h
sda/my-plugin/: CMakeLists.txt
sda/my-plugin/src/: MyPlugin.cpp
sda/src/: Change.cpp  Factory.cpp  Program.cpp  Project.cpp
sda/src/Callbacks/: ContextCallbacks.cpp  ProjectContextCallbacks.cpp
sda/src/Database/: Database.cpp  Loader.cpp  Schema.cpp  Transaction.cpp
sda/src/plugin/: PluginLoader.cpp
sda/test/: CMakeLists.txt
sda/test/Change/: ContextChangeTest.cpp
sda/test/Database/: ContextDatabaseTest.cpp
sda/test/common/: CMakeLists.txt
src/core/: Address.cpp  Address.h  AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  Core.cpp  Exception.h  Function.cpp  Function.h  ImageDecorator.cpp  ImageDecorator.h  Module.cpp  Offset.h  Program.cpp  Program.h  Project.cpp  Project.h  ProjectManager.cpp  ProjectManager.h  SymbolTable.cpp  SymbolTable.h
src/database/: AbstractMapper.cpp  AbstractMapper.h  CMakeLists.txt  Database.cpp  DatabaseModule.cpp  DomainObject.cpp  DomainObject.h  Transaction.cpp  Transaction.h
src/debugger/: CMakeLists.txt  Debug.cpp  Debug.h  DebugSession.h  DebuggerEngine.cpp  DebuggerEngine.h
src/gui/: CMakeLists.txt  DecompilerDemoPanel.cpp  DecompilerDemoPanel.h  DecompilerDemoWindow.cpp  DecompilerDemoWindow.h  InstructionViewer.h  ItemSelector.h  main.cpp
src/shared/: CMakeLists.txt  Module.cpp  Program.cpp  Project.cpp
(+705 files in other folders)
